# ebk

./: .gitignore  .src2mdignore  404.html  =1.23.0  AI_FEATURES.md  CITATION.cff  CLAUDE.md  MANIFEST.in  Makefile  PLUGIN_ARCHITECTURE.md  README.md  ROADMAP.md  apply_decorators.py  environment.yml  mkdocs.yml  objects.inv  project.md  pyproject.toml  requirements-core.txt  requirements-old.txt  requirements.txt  requirements2.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml
about/changelog/: index.html
about/license/: index.html
advanced/hugo-export/: index.html
advanced/recommendations/: index.html
advanced/symlink-dag/: index.html
book_memex/: __init__.py  _ebk_alias.py  calibre_import.py  cli.py  extract_metadata.py  library_db.py  opds.py  search_parser.py  server.py
book_memex/core/: __init__.py  fts.py  soft_delete.py  uri.py
book_memex/db/: __init__.py  migrations.py  models.py  session.py
book_memex/exports/: arkiv.py  base_exporter.py  echo_export.py  html_app.py  html_library.py  html_utils.py  hugo.py  jinja_export.py  multi_facet_export.py  opds_export.py  symlink_dag.py  zip.py
book_memex/mcp/: server.py  sql_executor.py  tools.py
book_memex/plugins/: __init__.py  base.py  hooks.py  registry.py
book_memex/services/: __init__.py  annotation_extraction.py  arkiv_import.py  ask_book.py  content_indexer.py  export_service.py  import_service.py  marginalia_service.py  reading_session_service.py  tag_service.py  text_extraction.py  view_service.py
book_memex/similarity/: __init__.py  base.py  core.py  extractors.py  metrics.py
book_memex/views/: __init__.py  dsl.py
development/AI_FEATURES/: index.html
development/CLEANUP_SUMMARY/: index.html
development/CODE_REVIEW/: index.html
development/DESIGN_PLAN/: index.html
development/PLUGIN_ARCHITECTURE/: index.html
development/PYTHONIC_API/: index.html
development/ROADMAP/: index.html
development/TESTS_QUICK_REFERENCE/: index.html
development/TEST_DESIGN_SUMMARY/: index.html
development/api-reference/: index.html
development/contributing/: index.html
docs/: API_GUIDE.md  index.md  piping-implementation-summary.md  shell-piping-design.md  tags-complete-implementation.md  tags-phase1-summary.md  tags-phase2-summary.md  tags-phase3-summary.md  tags-phase4-summary.md
docs/about/: changelog.md  license.md
docs/advanced/: batch-operations.md  hugo-export.md  recommendations.md  symlink-dag.md
docs/development/: CLEANUP_SUMMARY.md  CODE_REVIEW.md  DESIGN_PLAN.md  PYTHONIC_API.md  ROADMAP.md  TESTS_QUICK_REFERENCE.md  TEST_DESIGN_SUMMARY.md  api-reference.md  architecture.md  contributing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/integrations/: index.md  mcp.md  streamlit.md  visualizations.md
docs/user-guide/: api.md  cli.md  import-export.md  library-management.md  llm-features.md  search.md  server.md
ebk/: __init__.py  calibre_import.py  cli.py  cli.py.grouped-backup  config.py  convert_calibre.py  dash.py  decorators.py  exporter.py  extract_metadata.py  ident.py  library.py  library_db.py  library_enhanced.py  llm-instructions.md  llm.py  manager.py  merge.py  opds.py  search_parser.py  server.py  utils.py  vfs_router.py
ebk/ai/: __init__.py  knowledge_graph.py  metadata_enrichment.py  question_generator.py  reading_companion.py  semantic_search.py  text_extractor.py
ebk/db/: __init__.py  migrations.py  models.py  session.py
ebk/exports/: base_exporter.py  echo_export.py  html_library.py  html_utils.py  hugo.py  jinja_export.py  markdown.py  multi_facet_export.py  opds_export.py  symlink_dag.py  zip.py
ebk/imports/: calibre.py  ebooks.py
ebk/mcp/: server.py  sql_executor.py  tools.py
ebk/plugins/: hooks.py  registry.py
ebk/repl/: __init__.py  find.py  grep.py  shell.py  text_utils.py
ebk/services/: __init__.py  annotation_extraction.py  annotation_service.py  export_service.py  import_service.py  marginalia_service.py  personal_metadata_service.py  queue_service.py  tag_service.py  text_extraction.py  view_service.py
ebk/similarity/: __init__.py  base.py  core.py  extractors.py  metrics.py
ebk/skills/: SKILL.md  __init__.py
ebk/streamlit/: app.py  display.py  filters.py  utils.py
ebk/vfs/: __init__.py  base.py  library_vfs.py  resolver.py
ebk/views/: __init__.py  dsl.py  service.py
examples/: fluent_api_demo.py
getting-started/configuration/: index.html
getting-started/quickstart/: index.html
integrations/: PLUGINS.md  README.md  index.html
integrations/llm/: __init__.py  http_llm_provider.py
integrations/mcp/: README.md  ebk_mcp_server.py  index.html
integrations/metadata/: __init__.py  (+2 more)
legacy/: merge.py  personal.py  utils.py
piping-implementation-summary/: index.html
scripts/: check_coverage.py  deploy-docs.sh  fix_all_indentation.py  fix_cli_indents.py
search/: search_index.json
shell-piping-design/: index.html
site/: 404.html  index.html  sitemap.xml
tags-complete-implementation/: index.html
tags-phase1-summary/: index.html
tags-phase2-summary/: index.html
tags-phase3-summary/: index.html
tags-phase4-summary/: index.html
tests/: conftest.py  test_advanced_features.py  test_arkiv_import.py  test_ask_book.py  test_book_content_model.py  test_cli_new_commands.py  test_cli_reindex.py  test_content_extraction.py  test_content_indexer.py  test_content_indexer_on_import.py  test_core_fts.py  test_core_modules.py  test_database_library.py  test_db_models.py  test_exports.py  test_exports_html.py  test_filters.py  test_html_app.py  test_imports.py  test_integrations.py  test_library_api.py  test_marginalia_service_extended.py  test_mcp_content_tools.py  test_mcp_marginalia_tools.py  test_mcp_reading_tools.py  test_mcp_server.py  test_mcp_sql_executor.py  test_mcp_tools.py  test_migration_10_uri_columns.py  test_migration_11_book_content.py  test_migration_12_fts.py  test_migration_9_archived_at.py  test_model_new_columns.py  test_new_services.py  test_opds.py  test_phase1_e2e.py  test_phase2_e2e.py  test_piping.py  test_plugins.py  test_reader_endpoints.py  (+20 more)
(+78 files in other folders)
